# apocrypha-haskell

./: .gitignore  ColorText.hs  Database.hs  Dockerfile  Main.hs  Makefile  README.md  apocrypha.cabal  benchmark.hs  bot.hs  counter.hs  database.hs  devbot_list  echo.hs  list.hs  server.hs  stress.sh  test_database.hs  todo.txt
Apocrypha/: Cache.hs  Client.hs  Database.hs  Network.hs  Network2.hs  Options.hs  Protocol.hs  Server.hs  server.hs
Apocrypha/Internal/: Cache.hs  Database.hs  Options.hs
Apocrypha/Server/: Plugin.hs
Apocrypha/Server/Plugin/: Hasher.hs
Devbot/: Core.hs
apocrypha/: Makefile  README.md  apocrypha.cabal
apocrypha/Apocrypha/: Cache.hs  Client.hs  Database.hs  Options.hs  Protocol.hs
apocrypha/Apocrypha/Internal/: Options.hs
apocrypha/Network/Apocrypha/: Client.hs  Database.hs  Protocol.hs
apocrypha/src/: benchmark.hs  d.hs  server.hs
apocrypha/test/: OptionsSpec.hs  ProtocolSpec.hs
devbot/: ColorText.hs  Devbot.hs  Makefile  README.md  devbot.cabal  stack.yaml
devbot/Devbot/: Bot.hs  Core.hs  List.hs  Status.hs
devbot/src/: bot.hs  list.hs  main.hs  status.hs
src/: benchmark.hs  d.hs  server.hs
test/: DatabaseSpec.hs  HasherSpec.hs  OptionsSpec.hs  ProtocolSpec.hs
