name:                apocrypha
version:             0.1.1.0
synopsis:            A lightweight, flexible JSON server and client
description:         Please see README.md
homepage:            https://public.anardil.net/code/apocrypha-haskell/
license:             MIT
license-file:        LICENSE
author:              Austin
maintainer:          austin@anardil.net
copyright:           2018, Austin
category:            Network
build-type:          Simple
cabal-version:       >=1.10


flag release
  description:         for installation
  default: False
  manual: True


executable d
  hs-source-dirs:      src
  main-is:             d.hs
  default-language:    Haskell2010

  ghc-options: -Wall

  if flag(release)
    ghc-options: -O2
  else
    ghc-options: -O0

  build-depends:
    base >= 4.7 && < 5,
    apocrypha


executable apocrypha-server
  hs-source-dirs:      src
  main-is:             server.hs
  default-language:    Haskell2010

  ghc-options: -Wall -threaded

  if flag(release)
    ghc-options: -O2
  else
    ghc-options: -O0

  if os(mingw32)
    ghc-options: -Wno-unused-imports

  build-depends:
    base >= 4.7 && < 5,
    aeson,
    apocrypha,
    async,
    bytestring,
    directory,
    mtl,
    network,
    stm,
    text,
    unordered-containers


executable bench-apocrypha
  hs-source-dirs:      src
  main-is:             benchmark.hs
  default-language:    Haskell2010

  ghc-options: -Wall -threaded

  if flag(release)
    ghc-options: -O2
  else
    ghc-options: -O0

  build-depends:
    base >= 4.7 && < 5,
    apocrypha,
    containers,
    time,
    async


library
  hs-source-dirs:      .

  ghc-options: -Wall

  if flag(release)
    ghc-options: -O2
  else
    ghc-options: -O0

  exposed-modules:
    Apocrypha.Client
    Apocrypha.Protocol
    Apocrypha.Database
    Apocrypha.Options

    Apocrypha.Internal.Cache
    Apocrypha.Internal.Database
    Apocrypha.Internal.Options

  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    aeson,
    aeson-pretty,
    binary,
    bytestring,
    directory,
    filelock,
    filepath,
    network,
    stm,
    text,
    unordered-containers,
    vector,
    zlib


test-suite database
  hs-source-dirs:      test
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0

  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    aeson,
    apocrypha,
    bytestring,
    directory,
    hspec,
    QuickCheck,
    text,
    vector,
    unordered-containers

  other-modules:
    ProtocolSpec
    OptionsSpec
    DatabaseSpec

  build-tool-depends: hspec-discover:hspec-discover == 2.*


source-repository head
  type:     git
  location: git://github.com/Gandalf-/Haskell
