name:                apocrypha
version:             0.1.1.0
synopsis:            A lightweight, flexible JSON server and client
description:         Please see README.md
homepage:            https://www.anardil.net
license:             MIT
license-file:        LICENSE
author:              Austin
maintainer:          austin@anardil.net
copyright:           2018, Austin
category:            Network
build-type:          Simple
cabal-version:       >=1.10


flag release
  description:         for installation
  default: False
  manual: True


executable d
  hs-source-dirs:      src
  main-is:             d.hs
  default-language:    Haskell2010

  ghc-options: -Wall

  if flag(release)
    ghc-options: -O2
  else
    ghc-options: -O0

  build-depends:
    base >= 4.7 && < 5,
    apocrypha


executable apocrypha-server
  hs-source-dirs:      src
  main-is:             server.hs
  default-language:    Haskell2010

  ghc-options: -Wall -threaded

  if flag(release)
    ghc-options: -O2
  else
    ghc-options: -O0

  if os(mingw32)
    ghc-options: -Wno-unused-imports

  build-depends:
    base >= 4.7 && < 5,
    apocrypha,
    network,
    directory,
    text,
    unordered-containers,
    bytestring,
    mtl,
    async,
    stm


executable bench-apocrypha
  hs-source-dirs:      src
  main-is:             benchmark.hs
  default-language:    Haskell2010

  ghc-options: -Wall -threaded

  if flag(release)
    ghc-options: -O2
  else
    ghc-options: -O0

  build-depends:
    base >= 4.7 && < 5,
    apocrypha,
    containers,
    time,
    async


library
  hs-source-dirs:      .

  ghc-options: -Wall

  if flag(release)
    ghc-options: -O2
  else
    ghc-options: -O0

  exposed-modules:
    Apocrypha.Client
    Apocrypha.Protocol
    Apocrypha.Database
    Apocrypha.Options

    Apocrypha.Internal.Cache
    Apocrypha.Internal.Database
    Apocrypha.Internal.Options

    Apocrypha.Server.Plugin
    Apocrypha.Server.Plugin.Hasher

  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    aeson,
    aeson-pretty,
    network,
    filelock,
    stm,
    text,
    time,
    scientific,
    bytestring,
    vector,
    unordered-containers,
    directory,
    binary,
    filepath,
    split,
    cryptohash,
    zlib


test-suite database
  hs-source-dirs:      test
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0

  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    apocrypha,
    hspec,
    QuickCheck,
    bytestring,
    directory,
    network,
    aeson,
    text,
    vector,
    unordered-containers

  other-modules:
    ProtocolSpec
    OptionsSpec
    DatabaseSpec
    HasherSpec

  build-tool-depends: hspec-discover:hspec-discover == 2.*


source-repository head
  type:     git
  location: git://github.com/Gandalf-/Haskell
