name:                apocrypha
version:             0.1.0.0
synopsis:            A lightweight, flexible JSON server and client
description:         Please see README.md
homepage:            https://www.anardil.net
license:             BSD3
license-file:        LICENSE
author:              Austin Voecks
maintainer:          austin.voecks@gmail.com
copyright:           2018, Austin Voecks
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable d
  hs-source-dirs:      src
  main-is:             d.hs
  default-language:    Haskell2010

  ghc-options:
    -Wall -Wno-type-defaults -Wno-missing-signatures -Wno-name-shadowing
    -O

  build-depends:
    base >= 4.7 && < 5,
    apocrypha

executable apocrypha-server
  hs-source-dirs:      src
  main-is:             server.hs
  default-language:    Haskell2010

  ghc-options:
    -Wall -Wno-type-defaults -Wno-missing-signatures -Wno-name-shadowing
    -O -threaded

  build-depends:
    base >= 4.7 && < 5,
    apocrypha,
    aeson,
    network,
    text,
    unordered-containers,
    bytestring,
    mtl,
    async

library
  hs-source-dirs:      .

  ghc-options:
    -Wall -Wno-type-defaults -Wno-missing-signatures -Wno-name-shadowing

  exposed-modules:
    Apocrypha.Client
    Apocrypha.Protocol
    Apocrypha.Database

  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    aeson,
    aeson-pretty,
    network,
    text,
    bytestring,
    vector,
    unordered-containers,
    directory,
    binary
