name:                apocrypha
version:             0.1.1.0
synopsis:            A lightweight, flexible JSON server and client
description:         Please see README.md
homepage:            https://www.anardil.net
license:             MIT
license-file:        LICENSE
author:              Austin Voecks
maintainer:          austin.voecks@gmail.com
copyright:           2018, Austin Voecks
category:            Network
build-type:          Simple
cabal-version:       >=1.10


flag release
  description:         for installation
  default: False
  manual: True


executable d
  hs-source-dirs:      src
  main-is:             d.hs
  default-language:    Haskell2010

  ghc-options: -Wall

  if flag(release)
    ghc-options: -O2
  else
    ghc-options: -O0

  build-depends:
    base >= 4.7 && < 5,
    apocrypha


executable apocrypha-server
  hs-source-dirs:      src
  main-is:             server.hs
  default-language:    Haskell2010

  ghc-options: -Wall -threaded

  if flag(release)
    ghc-options: -O2
  else
    ghc-options: -O0

  build-depends:
    base >= 4.7 && < 5,
    apocrypha,
    aeson,
    network,
    text,
    unordered-containers,
    bytestring,
    mtl,
    async


executable bench-apocrypha
  hs-source-dirs:      src
  main-is:             benchmark.hs
  default-language:    Haskell2010

  ghc-options: -Wall -threaded

  if flag(release)
    ghc-options: -O2
  else
    ghc-options: -O0

  build-depends:
    base >= 4.7 && < 5,
    apocrypha,
    time,
    async


library
  hs-source-dirs:      .

  ghc-options: -Wall

  if flag(release)
    ghc-options: -O2
  else
    ghc-options: -O0

  exposed-modules:
    Apocrypha.Client
    Apocrypha.Protocol
    Apocrypha.Database
    Apocrypha.Cache
    Apocrypha.Options

  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    aeson,
    aeson-pretty,
    network,
    text,
    bytestring,
    vector,
    unordered-containers,
    directory,
    binary


test-suite database
  hs-source-dirs:      test
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0

  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    apocrypha,
    hspec

  other-modules:
    ProtocolSpec
    OptionsSpec

  build-tool-depends: hspec-discover:hspec-discover == 2.*


source-repository head
  type:     git
  location: git://github.com/Gandalf-/Haskell
