name:                devbot
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/bitemyapp/hello#readme
license:             BSD3
license-file:        LICENSE
author:              Austin Voecks
maintainer:          austin.voecks@gmail.com
copyright:           2018, Austin Voecks
category:            Network
build-type:          Simple
cabal-version:       >=1.10

flag release
  description:         for installation
  default: False
  manual: True

executable devbot
  hs-source-dirs:      src
  main-is:             main.hs
  default-language:    Haskell2010

  ghc-options:
    -Wall

  if flag(release)
    ghc-options: -O2
  else
    ghc-options: -O0

  build-depends:
    base >= 4.7 && < 5,
    apocrypha,
    devbot,
    process,
    time

library
  hs-source-dirs:
    .
    ../apocrypha

  ghc-options:
    -Wall

  if flag(release)
    ghc-options: -O2
  else
    ghc-options: -O0

  exposed-modules:
    Devbot.Core
    Devbot.List
    Devbot.Status
    Devbot.Bot
    ColorText

  other-modules:
    Apocrypha.Client
    Apocrypha.Protocol

  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    aeson,
    apocrypha,
    binary,
    bytestring,
    directory,
    network,
    process,
    text,
    time,
    unordered-containers,
    vector
